# senior_project

./: .dockerignore  .gitignore  AGENTS.md  MANUAL.md  database_backup.sql  docker-compose.yml  docs.md  handbook_seds_2022.json
backend/: Dockerfile  debug_gpa_pdf.py  nutrack_dump.sql  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_squashed.py  0002_handbook.py  0002_handbook_plans_enrollment_year.py  06e22dad7b9c_initial_migration.py  20260411_0001_initial.py  20260412_0002_study_materials.py  20260414_0003_study_material_private_uploads.py  20260416_0004_mindmaps.py  20260416_0004_mock_exams.py  20260416_0005_mock_exam_sources.py  20260418_0004_user_notification_subscription.py  20260418_0006_mock_exam_assessment_number.py  20260418_0007_assessment_numbers.py  20260419_0008_mindmaps.py  20260419_0009_users_profile_columns.py  20260419_0010_handbook_plans.py  20260419_0011_mock_exam_generation.py  20260419_0012_mock_generation_options.py  20260420_0012_study_guides.py  20260420_0013_flashcards.py  20260420_0014_merge_study_guides_flashcards.py  20260420_0015_notifications_profile_flag.py  20260420_0016_historic_question_fields.py  20260420_0017_question_curation.py  32d0a86858a2_initial.py  4f7d2b1a9c33_enrollment_identity_composite_pk.py  6a9275f1d8c4_normalize_courses_into_offerings.py  6d838942797e_transcript_and_course_models_are_added.py  9b3f4c2d1a10_split_term_year_fields.py  a3c7e9f2b841_add_assessments_table.py  (+12 more)
backend/app/: config.py  database.py  dependencies.py  main.py  redis.py  storage.py
backend/tests/: conftest.py
(+340 files in other folders)
