[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "better-profanity>=0.7.0",
    "boto3>=1.42.50",
    "celery>=5.6.2",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.0",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.0",
    "resend>=2.29.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
